clusters/prod/mesh-central/mesh-central.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/name: mesh-central
    app.kubernetes.io/part-of: mke
  name: mesh-central
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mesh-central
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mesh-central
    spec:
      containers:
      - env:
        - name: HOSTNAME
          value: mesh.mishi.com.co
        - name: USE_MONGODB
          value: 'false'
        image: ghcr.io/ylianst/meshcentral:1.2.1
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 20
          tcpSocket:
            port: 443
        name: mesh-central
        ports:
        - containerPort: 443
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 443
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /opt/meshcentral/meshcentral-data
          name: data
        - mountPath: /opt/meshcentral/meshcentral-files
          name: files
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mesh-central-data
      - name: files
        persistentVolumeClaim:
          claimName: mesh-central-files

---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/name: mesh-central
    app.kubernetes.io/part-of: mke
  name: mesh-central
  namespace: prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 443
  selector:
    app: mesh-central

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: prod-mesh-central-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: mesh-central
    app.kubernetes.io/part-of: mke
  name: mesh-central
  namespace: prod
spec:
  ingressClassName: traefik
  rules:
  - host: mesh.mishi.com.co
    http:
      paths:
      - backend:
          service:
            name: mesh-central
            port:
              number: 80
        path: /
        pathType: Prefix

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/name: mesh-central
    app.kubernetes.io/part-of: mke
  name: mesh-central-headers
  namespace: prod
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Port: '443'
      X-Forwarded-Proto: https
